--- a/seguridad/seguridad-web/src/main/webapp/app/mantto/regGrupo.xhtml
+++ b/seguridad/seguridad-web/src/main/webapp/app/mantto/regGrupo.xhtml
@@ -15,19 +15,18 @@
                 <div class="card card-w-title">
                     <h1>Datos Generales</h1>
                     <p:panelGrid style="width: 100%;" id="pngDatos" columns="2" columnClasses="ui-g-12 ui-md-2, ui-g-12 ui-md-10" styleClass="ui-panelgrid-blank form-group footerSinBorde">
-                        <p:outputLabel for="txtId" value="#{bundle['grp.id']}"/>
+                        <p:outputLabel for="txtId" value="#{bundle['gen.id']}"/>
                         <p:inputText id="txtId" size="3" value="#{grupoView.grupoSelected.idGrupo}" readonly="true"/>
                         <p:outputLabel for="txtNombre" value="#{bundle['grp.nombre']}"/>
                         <p:inputText id="txtNombre" size="50" value="#{grupoView.grupoSelected.nombreGrupo}" required="true" title="Nombre"/>
-
-                        <f:facet name="footer" >
-                            <p:panelGrid columns="3">
-                                <p:commandButton value="#{bundle['boton.limpiar']}" icon="fa fa-eraser" action="#{grupoView.limpiar()}" validateClient="true" process="@this" resetValues="true" update="pngDatos" style="height: 30px"/>
-                                <p:commandButton value="#{bundle['boton.nuevo']}" icon="fa fa-file-o" action="#{grupoView.nuevo()}" validateClient="true" process="@this" resetValues="true" update="pngDatos" style="height: 30px"/>
-                                <p:commandButton value="#{bundle['boton.guardar']}" icon="fa fa-floppy-o" action="#{grupoView.guardar()}" update="pngDatos tblGrupos" style="height: 30px"/>
-                            </p:panelGrid>
-                        </f:facet>
                     </p:panelGrid>
+                    <p:outputPanel styleClass="footerSinBorde">
+                        <h:panelGrid columns="3" style="float: right;" >
+                            <p:commandButton value="#{bundle['boton.limpiar']}" icon="fa fa-eraser" action="#{grupoView.limpiar()}" validateClient="true" process="@this" resetValues="true" update="pngDatos" style="height: 30px"/>
+                            <p:commandButton value="#{bundle['boton.nuevo']}" icon="fa fa-file-o" action="#{grupoView.nuevo()}" validateClient="true" process="@this" resetValues="true" update="pngDatos" style="height: 30px"/>
+                            <p:commandButton value="#{bundle['boton.guardar']}" icon="fa fa-floppy-o" action="#{grupoView.guardar()}" update="pngDatos tblGrupos" style="height: 30px"/>
+                        </p:panelGrid>
+                    </p:outputPanel>
                 </div>
 
                 <p:messages id="messages" showSummary="false" showDetail="true" closable="true">
