--- a/seguridad/seguridad-web/src/main/webapp/index.xhtml
+++ b/seguridad/seguridad-web/src/main/webapp/index.xhtml
@@ -2,15 +2,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
         Hello from Facelets
-        <p:panel header="ook">
-            
-        </p:panel>
+        <h:form>
+            <p:commandButton id="btnAgregar" value="Agregar" icon="fa fa-plus-circle" style="float: right; font-size: 12px; width: 100px;" action="#{gruOpcMenuView.seleccionarOpcionMenu()}">
+                <p:ajax event="dialogReturn"  />
+            </p:commandButton>
+        </h:form>
+        
+        <h:outputStylesheet name="personalizadas.css" library="css" />
     </h:body>
 </html>
 
