--- a/seguridad/seguridad-web/src/main/webapp/app/mantto/regGrupo.xhtml
+++ b/seguridad/seguridad-web/src/main/webapp/app/mantto/regGrupo.xhtml
@@ -25,7 +25,7 @@
                             <p:commandButton value="#{bundle['boton.limpiar']}" icon="fa fa-eraser" action="#{grupoView.limpiar()}" validateClient="true" process="@this" resetValues="true" update="pngDatos" style="height: 30px"/>
                             <p:commandButton value="#{bundle['boton.nuevo']}" icon="fa fa-file-o" action="#{grupoView.nuevo()}" validateClient="true" process="@this" resetValues="true" update="pngDatos" style="height: 30px"/>
                             <p:commandButton value="#{bundle['boton.guardar']}" icon="fa fa-floppy-o" action="#{grupoView.guardar()}" update="pngDatos tblGrupos" style="height: 30px"/>
-                        </p:panelGrid>
+                        </h:panelGrid>
                     </p:outputPanel>
                 </div>
 
