Paquete mejoras en las paginas

--- a/paquescolar-web/src/main/webapp/app/comunes/datosGenProveedor.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/datosGenProveedor.xhtml
@@ -15,8 +15,7 @@
             <p:panelGrid columns="2" columnClasses="col11,col1" 
                          styleClass="ui-panelgrid-blank form-group form-elements" 
                          style="border:0px none; background-color:transparent;">
-                <p:panelGrid columns="2" columnClasses="col4_label,col8" 
-                             >
+                <p:panelGrid columns="2" columnClasses="col4_label,col8" >
                     <p:outputLabel value="N.I.T.:"/>
                     <p:outputLabel styleClass="negrita" value="#{proveedorController.empresa.numeroNit}" />
                     <p:outputLabel value="Municipio y Departamento:"/>
