--- a/seguridad/seguridad-web/src/main/webapp/app/principal.xhtml
+++ b/seguridad/seguridad-web/src/main/webapp/app/principal.xhtml
@@ -14,7 +14,7 @@
                 <!-- Left Side -->
                 <div class="card card-w-title">
                     <h1>Datos Generales</h1>
-                    
+                    #{loginView.usuario.nombres} #{loginView.usuario.apellidos}
                 </div>
             </div>
         </div>
