--- a/seguridad/seguridad-web/src/main/webapp/error.xhtml
+++ b/seguridad/seguridad-web/src/main/webapp/error.xhtml
@@ -30,14 +30,14 @@
                             <div class="ui-g-12">
                                 <p:outputLabel value="Usuario" style="font-size: 18px; font-family: 'Bembo Std' !important"/>
                                 <div class="input-wrapper">
-                                    <input type="text" name="j_password" class="ui-inputfield ui-inputtext ui-widget ui-state-default ui-corner-all textMayuscula"/>
+                                    <input type="text" name="j_username" class="ui-inputfield ui-inputtext ui-widget ui-state-default ui-corner-all textMayuscula"/>
                                     <i class="fa fa-user" />
                                 </div>
                             </div>
                             <div class="ui-g-12">
                                 <p:outputLabel value="Clave de acceso" style="font-size: 18px; font-family: Bembo Std !important" />
                                 <div class="input-wrapper">
-                                    <input type="password" name="j_password" class="ui-inputfield ui-inputtext ui-widget ui-state-default ui-corner-all textMayuscula"/>
+                                    <input type="password" name="j_password" class="ui-inputfield ui-inputtext ui-widget ui-state-default ui-corner-all"/>  
                                     <i class="fa fa-lock" />
                                 </div>
                             </div>
